# poc-pattern-generator

./: .gitignore  Cargo.toml  a.c  index.html  package-lock.json  package.json  vercel.json  view.html  vite.config.js
.devcontainer/: Dockerfile  devcontainer.json
api/: a.c  pattern-generator.rs
scripts/: a.py  b.py  c.py  maxicanwave_bin_generator.py  maxicanwave_bin_generator_v0.py  maxicanwave_bin_generator_v1.py  maxicanwave_bin_generator_v2.py  maxicanwave_bin_generator_v3.py  maxicanwave_bin_generator_v4.py  rainbow_bin_generator.py  rainbow_bin_generator_v4.py  rainbow_visualizer.py  rainbow_visualizer_tui.py  run.sh
src/: App.jsx  ViewImpl.jsx  main.rs  view.jsx
