[package]
name = "pattern-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
vercel_runtime = "2.2.0"

[[bin]]
name = "pattern-generator"
path = "api/pattern-generator.rs"
